--- a/.travis.yml
+++ b/.travis.yml
@@ -7,14 +7,13 @@ install:
   - "pip install coveralls"
   - "gem install dpl"
 script:
-  - py.test -v --cov-report term-missing --cov=weppy_mvc_demp -r w tests
+  - py.test -v --cov-report term-missing --cov=weppy_mvc_demo -r w tests
 after_success:
   - coveralls
-  - coverage xml
 deploy:
   provider: elasticbeanstalk
-    access_key_id: $access-key-id
-    secret_access_key: $secret-access-key
+    access_key_id: $ACCESS_KEY_ID
+    secret_access_key: $SECRET_ACCESS_KEY
     region: "us-east-1"
     app: "weppy-mvc-demo"
     env: "weppy-mvc-demo-prd"
