:up: Update to using eb cli over travis ci

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,8 @@
 .coverage
 *databases/
 *private/
+
+# Elastic Beanstalk Files
+.elasticbeanstalk/*
+!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/*.global.yml
