:bug: Fix eb deploy

--- a/.gitignore
+++ b/.gitignore
@@ -11,5 +11,5 @@
 
 # Elastic Beanstalk Files
 .elasticbeanstalk/*
-!.elasticbeanstalk/*.cfg.yml
+!.elasticbeanstalk/config.yml
 !.elasticbeanstalk/*.global.yml
