--- a/shippable.yml
+++ b/shippable.yml
@@ -14,6 +14,9 @@ build:
 
 integrations:
   deploy:
+    branches:
+      only:
+        - master
     integrationName: shippable_eb_deploy
       type: aws
       target: eb_paas
