--- a/shippable.yml
+++ b/shippable.yml
@@ -14,10 +14,10 @@ build:
 
 integrations:
   deploy:
-    - integrationName: "shippable_eb_deploy"
+    - integrationName: shippable_eb_deploy
       type: aws
       target: eb_paas
-      platform: "64bit Amazon Linux 2016.03 v2.1.0 running Docker 1.9.1"
+      platform: 64bit Amazon Linux 2016.03 v2.1.0 running Docker 1.9.1
       application_name: weppy-mvc-demo
       env_name: weppy-mvc-demo-dev
       region: us-east-1
